# honors-forum-project

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  README.md  foo.cc
compiler/: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  README.md
compiler/include/gallium/ast/: matchers.h
compiler/src/: CMakeLists.txt  driver.cc  driver.h  main.cc
compiler/src/ast/: matchers.h  modular_id.h  nodes.h  program.h  source_loc.h  visitors.h
compiler/src/ast/nodes/: ast_node.h  declaration.cc  declaration.h  declaration_visitor.h  expression.cc  expression.h  expression_visitor.h  modular_id.h  node.h  statement.cc  statement.h  statement_visitor.h  statements.h  type.cc  type.h  type_visitor.h  value_visitor.h
compiler/src/ast/visitors/: declaration_visitor.h  expression_visitor.h  statement_visitor.h  type_visitor.h  value_visitor.h
compiler/src/core/: codegen.cc  codegen.h  emit.cc  emit.h  environment.cc  environment.h  error_reporting.cc  error_reporting.h  mangler.cc  mangler.h  name_resolver.cc  name_resolver.h  predefined.cc  predefined.h  type_checker.cc  type_checker.h  typechecker.cc  typechecker.h
compiler/src/core/backend/: builtins.cc  builtins.h  code_generator.cc  code_generator.h  constant_pool.cc  constant_pool.h  llvm_state.cc  llvm_state.h  optimizer.cc  optimizer.h  stored_value.h  variable_resolver.cc  variable_resolver.h
compiler/src/core/generator/: code_generator.cc  code_generator.h  variable_resolver.cc  variable_resolver.h
compiler/src/errors/: console_reporter.cc  console_reporter.h  diagnostics.cc  diagnostics.h  reporter.cc  reporter.h
compiler/src/syntax/: Gallium.g4  lexer.cc  lexer.h  parse_errors.cc  parse_errors.h  parser.cc  parser.h
compiler/src/utility/: cast.h  flags.cc  flags.h  log.cc  log.h  misc.cc  misc.h  pretty.cc  pretty.h  ticket_mutex.cc  ticket_mutex.h
compiler/tests/: CMakeLists.txt
compiler/tests/compiler/: higher_order.gal  loop_downto.gal  nop.gal  varargs.gal
compiler/tests/compiler/array/: dynamic.gal  ranges.gal  sum.gal  transform.gal
compiler/tests/compiler/math/: average.gal  distance.gal  even_odd.gal  fibonacci.gal  quadratic.gal  sum_to.gal
compiler/tests/compiler/overflow/: add.gal  mul.gal  neg.gal  shift_l.gal  shift_r.gal
compiler/tests/compiler/should-run/array/: out_of_bounds.gal  sum.gal  transform.gal
compiler/tests/compiler/should-run/overflow/: sub.gal
compiler/tests/compiler/string/: find_letter.gal  find_substring.gal  palindrome.gal
compiler/tests/run/: 1_nop.gal
compiler/tests/scratch/: aggs.gal  b.gal  five.gal  fizzbuzz.gal  for.gal  four.gal  gtk-hello.gal  lol.gal  one.gal  printf.gal  seven.gal  six.gal  three.gal  two.gal
compiler/tests/unit/: test_mangler.cc  test_utils.cc  test_utils.h
compiler/tools/: antlr4.bat  antlr4.sh  antlr4_build.py  test_runner.py
compiler/tools/gdb/: absl_pretty_printers.py
diagrams/: analysis-architecture.drawio  codegen.drawio  compiler-phases.drawio  lexing.drawio  llvm-architecture.drawio  parsing-ast-lean.drawio  parsing-ast-verbose.drawio  type-ast
docs/: _config.yml  index.html  index.md
docs/_course/: 01_basics.md  02_high_level.md  03_parsing.md  04_type_analysis.md  05_ir.md  06_machine_code.md
docs/_data/: navigation.yml
docs/_design/: 01_architecture.md  02_ast.md  03_diagnostics.md  04_name_mangling.md  05_memory_layout.md  06_builtins.md  07_llvm.md  08_linking.md  09_parsing.md
docs/_includes/: footer.html  scripts.html
docs/_journals/: 00_november.md  01_december.md  02_january.md  03_february.md  04_march.md
docs/_language/: 01_types.md  02_exprs_stmts.md  3_operations.md  4_functions.md
docs/_pages/: articles.md  journals.md  language.md  planning.md  reflection.md  time_log.md  video.md
docs/_posts/: 2021-09-23-welcome-to-jekyll.md
docs/core/: 01_architecture.md  02_ast.md  02_ast_matchers.md  02_llvm.md  03_diagnostics.md  04_name_mangling.md  05_memory_layout.md  06_builtins.md  07_llvm.md  09_parsing.md  architecture.md  ast_matchers.md  diagnostics.md  index.md  name_mangling.md
docs/crash_course/: 01_basics.md  02_high_level.md  03_parsing.md  04_parsing.md  04_type_analysis.md  05_ir.md  05_type_analysis.md  06_machine_code.md  index.md
docs/journals/: 01_november.md  03_february.md  september.md
docs/language/: 01_types.md  02_expressions.md  02_exprs_stmts.md  3_operations.md  5_ffi.md  basics.md  high_level.md  index.md  parsing.md
docs/spec/: 01_gallium_language.md  02_grammar.md  03_expressions.md  04_types.md  expressions.md  gallium_language.md  grammar.md  index.md  types.md
docs2/_includes/: head_custom.html
docs2/core/: 01_architecture.md  04_name_mangling.md  05_memory_layout.md  06_builtins.md  08_linking.md  index.md
docs2/crash_course/: 02_high_level.md  05_ir.md  index.md
docs2/journals/: 01_december.md  02_january.md  index.md
docs2/language/: 01_types.md  4_functions.md
runtime/: CMakeLists.txt
runtime/src/: CMakeLists.txt  assertions.cc  entry.cc  gallium_main.h  gallium_stdlib.cc  gallium_stdlib.h  misc.cc  panic.cc  runtime.cc  runtime.h
runtime/tests/: CMakeLists.txt
web/: .gitignore  _config.yml
web/_course/: 02_high_level.md  03_parsing.md  04_type_analysis.md
web/_design/: 01_architecture.md  02_ast.md  03_diagnostics.md  05_memory_layout.md  07_llvm.md  09_parsing.md
web/_includes/: scripts.html
web/_journals/: 02_january.md  03_february.md
web/_language/: 5_ffi.md
web/_pages/: articles.md  crash_course.md  design.md
